--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-  "name": "rinc-store",
-  "version": "0.1.0",
+  "name": "frm-rinc",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,12 +8,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "breakpoint-slicer": "^3.0.0-beta.1",
+    "firebase": "^9.6.7",
+    "firebase-tools": "^10.2.1",
+    "html-react-parser": "^1.4.8",
+    "lodash.debounce": "^4.0.8",
+    "lodash.kebabcase": "^4.1.1",
     "next": "12.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-firebase-hooks": "^5.0.3",
+    "react-hook-form": "^7.27.1",
+    "react-hot-toast": "^2.2.0",
+    "react-icons": "^4.3.1",
+    "react-markdown": "^8.0.0",
+    "sass": "^1.49.9"
   },
   "devDependencies": {
-    "eslint": "8.10.0",
+    "eslint": "8.9.0",
     "eslint-config-next": "12.1.0"
   }
 }
