--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-hot-toast": "^2.2.0",
     "react-icons": "^4.3.1",
     "react-markdown": "^8.0.0",
+    "react-select": "^5.2.2",
     "sass": "^1.49.9"
   },
   "devDependencies": {
