--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bootstrap": "^5.1.3",
     "breakpoint-slicer": "^3.0.0-beta.1",
     "firebase": "^9.6.7",
     "firebase-tools": "^10.2.1",
