--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@paypal/react-paypal-js": "^7.6.0",
     "bootstrap": "^5.1.3",
     "breakpoint-slicer": "^3.0.0-beta.1",
     "firebase": "^9.6.7",
@@ -23,6 +24,7 @@
     "react-hot-toast": "^2.2.0",
     "react-icons": "^4.3.1",
     "react-markdown": "^8.0.0",
+    "react-responsive": "^9.0.0-beta.6",
     "react-select": "^5.2.2",
     "sass": "^1.49.9"
   },
