--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@paypal/react-paypal-js": "^7.6.0",
     "bootstrap": "^5.1.3",
     "breakpoint-slicer": "^3.0.0-beta.1",
+    "chart.js": "^3.7.1",
     "firebase": "^9.6.7",
     "firebase-tools": "^10.2.1",
     "html-react-parser": "^1.4.8",
@@ -18,6 +19,7 @@
     "lodash.kebabcase": "^4.1.1",
     "next": "12.1.0",
     "react": "17.0.2",
+    "react-chartjs-2": "^4.0.1",
     "react-dom": "17.0.2",
     "react-firebase-hooks": "^5.0.3",
     "react-hook-form": "^7.27.1",
