--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "breakpoint-slicer": "^3.0.0-beta.1",
     "chart.js": "^3.7.1",
     "firebase": "^9.6.7",
-    "firebase-tools": "^10.2.1",
+    "firebase-tools": "^1.2.0",
     "html-react-parser": "^1.4.8",
     "lodash.debounce": "^4.0.8",
     "lodash.kebabcase": "^4.1.1",
     "next": "12.1.0",
+    "openapi-typescript": "^5.2.0",
     "react": "17.0.2",
     "react-chartjs-2": "^4.0.1",
     "react-dom": "17.0.2",
@@ -28,7 +29,8 @@
     "react-markdown": "^8.0.0",
     "react-responsive": "^9.0.0-beta.6",
     "react-select": "^5.2.2",
-    "sass": "^1.49.9"
+    "sass": "^1.49.9",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "eslint": "8.9.0",
